<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">A Tasty Trade Watchlists</string>
    <!-- Generic -->
    <string name="error_generic">We have encountered an issue and were not able to fetch your data. We are sorry for the inconvenience and are investigating the issue.</string>
    <string name="bid_price">Bid</string>
    <string name="ask_price">Ask</string>
    <string name="last_price">Last</string>
    <string name="monetary_fallback">$--.--</string>

    <!-- Auth Strings -->
    <string name="auth_fragment_label">Authentication</string>
    <string name="auth_title">Please authenticate to continue</string>
    <string name="auth_username_hint">Sandbox User</string>
    <string name="auth_password_hint">Sandbox Password</string>
    <string name="auth_button_login">Log In</string>

    <!-- Watchlists Overview -->
    <string name="watchlists_overview_fragment_label">Your Watchlists</string>
    <string name="watchlists_no_watchlists_label">You have no watchlists.\nPlease use the + to create one.</string>

    <!-- Menu entries -->
    <string name="menu_action_logout">Logout</string>
    <string name="menu_action_refresh">Refresh</string>

    <!-- Watchlist Details -->
    <string name="watchlist_details_fragment_label">Watchlist Details</string>

</resources>
